--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>С днём рождения!</title>
     <link rel="stylesheet" href="src/css/style.css">
 </head>
-<body style="background-image: url('src/images/index-background.jpg')">
+<body class="index-body">
 <div class="vh-100 d-flex flex-column align-items-center justify-content-center">
     <div class="text-center bg-white p-4" style="border-radius: 1rem">
         <div class="">
