--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
     <title>С днём рождения!</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body class="index-body">
 <div class="vh-100 d-flex flex-column align-items-center justify-content-center">
