Обновлена главная страничка

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <hr class="mt-4 mb-3" style="border-top: dotted 5px; background-color: transparent;"/>
 
-        <a href="#" class="btn btn-dark col-12 btn-lg">
+        <a href="wishes/" class="btn btn-dark col-12 btn-lg">
             Нажми меня!
         </a>
     </div>
