--- a/wishes/index.html
+++ b/wishes/index.html
@@ -87,13 +87,21 @@
 
         <hr class="mt-4 mb-4" style="border-top: dotted 5px; background-color: transparent;"/>
 
-        <div class="">
+        <div class="mb-3">
             <h1>С днём рождения!</h1>
         </div>
-        
-        <div class="">
+
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
             <a href="../" class="link-secondary">
                 Вернуться на предыдущую страницу
+            </a>
+            <svg class="d-none d-md-block"
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 viewBox="0 0 16 16">
+                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+            </svg>
+            <a href="https://github.com/nekstas/hb-sml-2023" class="link-secondary" target="_blank">
+                Код сайта, если вам интересно
             </a>
         </div>
     </div>
