--- a/wishes/index.html
+++ b/wishes/index.html
@@ -92,15 +92,23 @@
         </div>
 
         <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
-            <a href="../" class="link-secondary">
+            <a href="../" class="link-secondary order-0">
                 Вернуться на предыдущую страницу
             </a>
-            <svg class="d-none d-md-block"
+            <svg class="d-none d-md-block order-1"
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  viewBox="0 0 16 16">
                 <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
             </svg>
-            <a href="https://github.com/nekstas/hb-sml-2023" class="link-secondary" target="_blank">
+            <span class="text-muted order-4 order-md-2">
+                27 апреля, 2023 год
+            </span>
+            <svg class="d-none d-md-block order-3"
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 viewBox="0 0 16 16">
+                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+            </svg>
+            <a href="https://github.com/nekstas/hb-sml-2023" class="link-secondary order-2 order-md-4" target="_blank">
                 Код сайта, если вам интересно
             </a>
         </div>
